force-app/main/default/objects/Process_Task_Detail__c/Process_Task_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Task Detail</label>
    <nameField>
        <label>Process Task Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Task Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>