force-app/main/default/objects/Process_Task_Detail__c/fields/IsBulkProcessing__c.field-meta.xml
<CustomField>
    <fullName>IsBulkProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BulkProcessing</label>
    <type>Checkbox</type>
</CustomField>