force-app/main/default/objects/Process_Task_Detail__c/fields/Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Type__c</fullName>
    <label>Task Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Record_Type</valueSetName>
    </valueSet>
</CustomField>