force-app/main/default/objects/Process_Task_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Task_Record_Type__c</columns>
    <columns>IsBulkProcessing__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>